--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -12,6 +12,9 @@ body {
   font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #333;
 }
+.done-icon {
+    margin: 0 0 0 5px;
+}
 paper-card {
   max-width: 940px;
   margin-left: auto;
