--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -38,6 +38,47 @@ paper-fab {
   bottom: 200px;
   right: 100px;
 }
+paper-dialog paper-icon-button.close {
+  position: absolute;
+  margin: 0;
+  top: 18px;
+  right: 14px;
+}
+paper-dialog paper-button {
+  margin: 20px 0 0;
+}
+paper-button.purple,
+paper-button.submit-btn {
+  background-color: #3f51b5;
+  color: #fff;
+  margin: 20px 0 0;
+}
+paper-dialog paper-button.purple[disabled],
+paper-dialog paper-button.submit-btn[disabled] {
+  background-color: #ccc;
+  color: #fff;
+  cursor: not-allowed;
+}
+paper-button.btn-block,
+paper-dropdown-menu.dropdown-block {
+  display: block;
+}
+.btn-group paper-button {
+  width: 50%;
+  float: left;
+  display: block;
+}
+
+.btn-group paper-button:first-of-type {
+  border-radius: 3px 0 0 3px;
+}
+
+.btn-group paper-button:last-of-type {
+  border-radius: 0 3px 3px 0;
+}
+.search {
+  display: inline-block;
+}
 .text-center {
   text-align: center;
 }
