--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,12 +1,3 @@
-/*
-Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
-*/
-
 body {
   background: #f2f2f2;
   font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -15,6 +6,9 @@ body {
 .done-icon {
   margin: 0 0 0 5px;
 }
+
+/* Card's elements */
+
 paper-card {
   max-width: 940px;
   margin-left: auto;
@@ -28,12 +22,19 @@ paper-card {
 .card-options paper-icon-button {
   vertical-align: top;
 }
+.search {
+  display: inline-block;
+}
+
+/* Buttons Style */
+
 paper-button[disabled] {
   background-color: #ccc;
   color: #fff;
   cursor: not-allowed;
 }
 paper-fab {
+  background-color: #3f51b5 !important;
   position: fixed;
   bottom: 200px;
   right: 100px;
@@ -47,38 +48,36 @@ paper-dialog paper-icon-button.close {
 paper-dialog paper-button {
   margin: 20px 0 0;
 }
-paper-button.purple,
-paper-button.submit-btn {
+paper-button.purple, paper-button.submit-btn {
   background-color: #3f51b5;
   color: #fff;
   margin: 20px 0 0;
 }
-paper-dialog paper-button.purple[disabled],
-paper-dialog paper-button.submit-btn[disabled] {
+paper-dialog paper-button.purple[disabled], paper-dialog paper-button.submit-btn[disabled] {
   background-color: #ccc;
   color: #fff;
   cursor: not-allowed;
 }
-paper-button.btn-block,
-paper-dropdown-menu.dropdown-block {
+paper-button.btn-block, paper-dropdown-menu.dropdown-block {
   display: block;
 }
+
+/* Button Groups */
+
 .btn-group paper-button {
   width: 50%;
   float: left;
   display: block;
 }
-
 .btn-group paper-button:first-of-type {
   border-radius: 3px 0 0 3px;
 }
-
 .btn-group paper-button:last-of-type {
   border-radius: 0 3px 3px 0;
 }
-.search {
-  display: inline-block;
-}
+
+/* Typography Helpers */
+
 .text-center {
   text-align: center;
 }
@@ -99,6 +98,9 @@ paper-dropdown-menu.dropdown-block {
   clear: both;
   content: '';
 }
+
+/* Lists Basic Styling */
+
 .info-head > * {
   font-weight: 700;
   padding: 16px 0;
