add subnetworks / bind network fab dropdown to delete confirmation dialog

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -39,6 +39,11 @@ paper-fab {
   bottom: 100px;
   right: 100px;
 }
+.fab-menu {
+  position: fixed;
+  bottom: 100px;
+  right: 100px;
+}
 paper-dialog paper-icon-button.close {
   position: absolute;
   margin: 0;
