pasword reset styling

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -8,7 +8,14 @@ body {
     margin: 0 0 0 5px;
 }
 
+a {
+    color: #0099cc;
+    text-decoration: none;
+}
 
+.paper-menu-1 .selectable-content.paper-menu  > .iron-selected {
+    color: #0099cc;
+}
 /* Card's elements */
 
 paper-card {
