lists style in sessions list

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -179,8 +179,8 @@ paper-dropdown-menu.dropdown-block {
 
 .info-body .info-item.last {
     border: none;
-}*/
-
+}
+*/
 
 /* Table Basic Styling */
 
