--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -24,7 +24,7 @@ paper-card {
     margin-right: auto;
 }
 
-.card-options {
+/*.card-options {
     position: absolute;
     top: 10px;
     right: 16px;
@@ -36,7 +36,7 @@ paper-card {
 
 .search {
     display: inline-block;
-}
+}*/
 
 
 /* Buttons Style */
