add sort active class per list's active sort option

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -10,6 +10,9 @@ a {
     color: #039BE5;
     text-decoration: none;
 }
+.active-sort {
+    color: #039BE5;
+}
 .paper-menu-1 .selectable-content.paper-menu > .iron-selected {
     color: #039BE5;
 }
