--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -45,7 +45,7 @@ paper-button[disabled] {
 }
 paper-fab {
     /*background-color: #3f51b5 !important;*/
-    position: fixed;
+    position: fixed !important;
     bottom: 100px;
     right: 100px;
 }
