--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -3,19 +3,24 @@ body {
     font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     color: #333;
 }
+
 .done-icon {
     margin: 0 0 0 5px;
 }
+
 a {
     color: #039BE5;
     text-decoration: none;
 }
+
 .active-sort {
     color: #039BE5;
 }
+
 .paper-menu-1 .selectable-content.paper-menu > .iron-selected {
     color: #039BE5;
 }
+
 
 /* Card's elements */
 
@@ -24,17 +29,21 @@ paper-card {
     margin-left: auto;
     margin-right: auto;
 }
+
 .card-options {
     position: absolute;
     top: 10px;
     right: 16px;
 }
+
 .card-options paper-icon-button {
     vertical-align: top;
 }
+
 .search {
     display: inline-block;
 }
+
 
 /* Buttons Style */
 
@@ -43,48 +52,61 @@ paper-button[disabled] {
     color: #a8a8a8;
     cursor: not-allowed;
 }
+
 paper-fab {
     /*background-color: #3f51b5 !important;*/
     position: fixed !important;
     bottom: 100px;
     right: 100px;
 }
+
 .fab-menu {
     position: fixed;
     bottom: 100px;
     right: 100px;
 }
+
 paper-dialog paper-icon-button.close {
     position: absolute;
     margin: 0;
     top: 15px;
     right: 16px;
 }
+
 paper-dialog paper-button {
     /* this might not be needed*/
     margin: 32px 0 0;
 }
+
 paper-button.red {
     background-color: #f44336;
     color: #fff;
 }
+
 paper-button.green {
     background-color: green;
     color: #fff;
 }
-paper-button.purple, paper-button.submit-btn {
+
+paper-button.purple,
+paper-button.submit-btn {
     background-color: #3f51b5;
     color: #fff;
     margin: 20px 0 0;
 }
-paper-button.purple[disabled], paper-button.submit-btn[disabled] {
+
+paper-button.purple[disabled],
+paper-button.submit-btn[disabled] {
     background-color: #eaeaea;
     color: #a8a8a8;
     cursor: not-allowed;
 }
-paper-button.btn-block, paper-dropdown-menu.dropdown-block {
+
+paper-button.btn-block,
+paper-dropdown-menu.dropdown-block {
     display: block;
 }
+
 
 /* Button Groups */
 
@@ -93,34 +115,67 @@ paper-button.btn-block, paper-dropdown-menu.dropdown-block {
     float: left;
     display: block;
 }
+
 .btn-group paper-button:nth-of-type(2n+1) {
     border-radius: 3px 0 0 3px;
 }
+
 .btn-group paper-button:nth-of-type(2n) {
     border-radius: 0 3px 3px 0;
 }
+
 
 /* Typography Helpers */
 
 .text-center {
     text-align: center;
 }
+
 .text-right {
     text-align: right;
 }
+
 .text-left {
     text-align: left;
 }
+
 .pull-right {
     float: right;
 }
+
 .pull-left {
     float: left;
 }
+
 .clearfix:after {
     display: table;
     clear: both;
     content: '';
+}
+
+.full-page {
+    width: 100%;
+    background-color: #eee;
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    height: 100%;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.centering-parent {    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: inherit;
+}
+
+.logo-head {
+    background-color: #263238;
+    padding: 8% 0;
+    margin-bottom: 16px;
 }
 
 /* Lists Basic Styling */
@@ -173,4 +228,3 @@ paper-button.btn-block, paper-dropdown-menu.dropdown-block {
 .info-table .info-group .info-item:last-of-type {
     border: none;
 }*/
-
